<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context="com.b07.view.ViewCart">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/view_cart_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="40dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="#00804C4C"
                    android:text="You have the following items in your cart:"
                    android:textSize="25dp"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/hockey_stick_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="40dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="#00804C4C"
                    android:text="@string/hockey_sticks"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#FC7F4288" />

                <TextView
                    android:id="@+id/skates_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="40dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="#00804C4C"
                    android:text="@string/skates"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#FC7F4288" />

                <TextView
                    android:id="@+id/protein_bar_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="40dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="#00804C4C"
                    android:text="@string/protein_bar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#FC7F4288" />

                <TextView
                    android:id="@+id/fishing_rod_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="40dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="#00804C4C"
                    android:text="@string/fishing_rod"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#FC7F4288" />

                <TextView
                    android:id="@+id/running_shoes_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="40dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="#00804C4C"
                    android:text="@string/running_shoes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#FC7F4288" />

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>